# m2m-migration-tool

./: .env.sample  .gitignore  README.md  pyproject.toml
src/m2m_migration_tool/: __about__.py  __main__.py  models.py
